--- a/Olive/Website/Views/Account/Index.cshtml
+++ b/Olive/Website/Views/Account/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Olive.Services.AccountOverview
+﻿@model Olive.Website.ViewModels.Account.IndexViewModel
 
 @{
     ViewBag.Title = "Overview";
