Added support for testing views with "RazorGenerator" component, fixed more tests. Changed CurrencyId of the Currency entities to just the name (USD, BTC, etc)

--- a/Olive/Website/Views/Account/Index.cshtml
+++ b/Olive/Website/Views/Account/Index.cshtml
@@ -13,7 +13,7 @@
         <th>Name</th>
     </tr>
 
-    @foreach (var account in this.Model)
+    @foreach (var account in this.Model.Accounts)
     {
         <tr>
             <td>@account.AccountId</td>
