Seemingly never ending work of getting the structure together with unit tests. TDD is very demanding.

--- a/Olive/Website/Views/Account/Index.cshtml
+++ b/Olive/Website/Views/Account/Index.cshtml
@@ -5,6 +5,11 @@
 }
 
 <h2>Overview</h2>
+
+<div>
+    <a href="/Account/Create">Create account</a>
+</div>
+
 <table>
     <tr>
         <th>#</th>
@@ -17,7 +22,7 @@
     {
         <tr>
             <td>@account.AccountId</td>
-            <td>@account.CurrencyShortName</td>
+            <td>@account.CurrencyId</td>
             <td>@account.Balance</td>
             <td>@account.DisplayName</td>
         </tr>
