--- a/Olive/Website/Views/Account/Index.cshtml
+++ b/Olive/Website/Views/Account/Index.cshtml
@@ -16,6 +16,7 @@
         <th>Currency</th>
         <th>Balance</th>
         <th>Name</th>
+        <th></th>
     </tr>
 
     @foreach (var account in this.Model.Accounts)
@@ -25,6 +26,10 @@
             <td>@account.CurrencyId</td>
             <td>@account.Balance</td>
             <td>@account.DisplayName</td>
+            <td>
+                <a href="/Account/Edit/@account.AccountId">Edit</a>
+                <a href="/Account/Transfer/?SourceAccountId=@account.AccountId">Transfer from</a>
+            </td>
         </tr>
     }
 </table>
