add show receive address in account details. close #20

--- a/Website/Views/Account/Details.cshtml
+++ b/Website/Views/Account/Details.cshtml
@@ -5,3 +5,10 @@
 }
 
 <h2>Details</h2>
+
+@if (Model.BitcoinReceiveAddress != null)
+{
+    <div>
+        Bitcoin receive address: @Model.BitcoinReceiveAddress
+    </div>
+}
