add site navigation. closes #2

--- a/Website/Views/Shared/_Layout.cshtml
+++ b/Website/Views/Shared/_Layout.cshtml
@@ -9,6 +9,20 @@
 </head>
 
 <body>
+    <div>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/User/Login">Login</a></li>
+            <li><a href="/User/Register">Register</a></li>
+            <li><a href="/Account">Accounts</a></li>
+            <li><a href="/Account/Create">Create account</a></li>
+            <li><a href="/Account/Transfer">Transfer</a></li>
+            <li><a href="/Account/Withdraw">Withdraw</a></li>
+            <li><a href="/Exchange">Exchange</a></li>
+            <li><a href="/Exchange/CreateOrder">Create exchange order</a></li>
+        </ul>
+    </div>
+
     @RenderBody()
 </body>
 </html>
